# Alien-State-University-of-People-and-Stuff

./: .gitignore  CMakeLists.txt  README.md  mingw-w64-toolchain.cmake
assets/: gameEnd.txt
assets/mapTemplates/: test.txt
assets/mapTemplates/1/: 0.txt  1.txt  2.txt  3.txt
assets/playerState/arrows/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
assets/screenFramesContent/: 0.txt  1.txt  10.txt  11.txt  12.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
scripts/: makeandrun.sh
src/: ExtraUI.cpp  ExtraUI.h  Game.cpp  Game.h  MainMap.cpp  MainMap.h  MainScreen.cpp  MainScreen.h  MapFrame.cpp  MapFrame.h  PlayerState.cpp  PlayerState.h  ScreenFrame.cpp  ScreenFrame.h  SpawnTemplates.cpp  SpawnTemplates.h  TipsWindow.cpp  TipsWindow.h  defines.h  main.cpp  main.h
